# youtrackd

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.agents/: architect.md  io-consistency.md  memory.md  process.md  reviewer.md  tester.md
.github/workflows/: ci.yml  release.yml
Casks/: ytd.rb
Formula/: ytd.rb
src/: args.rs  cli_spec.rs  client.rs  completion.rs  config.rs  duration.rs  error.rs  format.rs  help.rs  input.rs  main.rs  types.rs
src/commands/: alias.rs  article.rs  attachment.rs  board.rs  comment.rs  config.rs  group.rs  login.rs  logout.rs  mod.rs  open.rs  open_target.rs  project.rs  schema.rs  search.rs  skill.rs  sprint.rs  tag.rs  ticket.rs  url.rs  user.rs  visibility.rs  whoami.rs
tests/: completion_cli.rs  config_visibility.rs  help_attachment.rs  help_config.rs  help_open_url.rs  schema_cli.rs  skill.rs
user-journeys/: 01-auth-and-projects.md  02-ticket-lifecycle.md  03-article-lifecycle.md  04-tags-and-links.md  05-attachments.md  06-time-tracking.md  07-custom-fields.md  08-search-and-boards.md  09-history.md  10-api-compat-guard.md  11-visibility-defaults.md  12-comments.md  13-board-crud.md  14-sprint-crud.md  15-current-sprints.md  16-ticket-sprints.md  17-sprint-ticket-assignment.md  18-aliases.md  19-skill-generation.md  20-schema-discovery.md  PROCESS.md
